# uiactivity_ios_rs

./: .gitignore  Package.swift  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release-plz.yml
Sources/uiactivity_ios_rs/: uiactivity_ios_rs.swift
uiactivity_ios_rs/: CHANGELOG.md  Cargo.toml  README.md
uiactivity_ios_rs/.github/workflows/: release-plz.yml
uiactivity_ios_rs/src/: lib.rs  native.rs
