[package]
name = "uiactivity_ios_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Thierry Berger <contact@thierryberger.com>"]
documentation = "https://docs.rs/uiactivity_ios_rs"
repository = "https://github.com/vrixyz/uiactivity_ios_rs"
keywords = ["UIAactivity", "gamedev", "mobile", "ios", "swift"]
description = "Start a UIActivity on iOS from Rust code."

[package.metadata.docs.rs]
targets = [
    # macOS
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    # iOS
    "aarch64-apple-ios",
]

[dependencies]


[lints.rust]
missing_docs = "warn"
